<resources>
    <string name="app_name">Design Support Library Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
        rhoncus dictum placerat. In mollis magna quam, nec pharetra purus porttitor sit amet. Nulla
        tristique auctor risus ac tempor. Proin posuere ex vestibulum urna tincidunt bibendum. Sed
        id ornare tellus. Vivamus sollicitudin feugiat finibus. Aliquam erat volutpat. Curabitur
        ornare mauris id aliquet faucibus.</string>

    <string name="title_activity_my_item_input_fields">MyItem Input Fields Activity</string>
    <string name="title_activity_navigation_view">NavigationView</string>
    <string name="title_activity_floating_labels">Floating Labels</string>
    <string name="title_activity_floating_action_button">FloatingActionButton</string>
    <string name="title_activity_snackbar">Snackbar</string>
    <string name="title_activity_card_view">CardView</string>
    <string name="title_activity_recycler_view">RecyclerView</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="main_navigation_view">NavigationView</string>
    <string name="main_floating_labels">Floating labels for editing texts</string>
    <string name="main_floating_action_button">FloatingActionButton</string>
    <string name="main_snackbar">Snackbar</string>
    <string name="main_card_view">CardView</string>
    <string name="main_recycler_view">RecyclerView</string>
    <string name="main_tabs_view_pager">Tabs + ViewPager</string>
    <string name="main_coord_layout_fab">CoordinatorLayout + FloatingActionButton</string>
    <string name="main_coord_layout_appbar">CoordinatorLayout + AppBarLayout</string>
    <string name="main_collapsing_toolbars_parallax_img">Collapsing Toolbars + Parallax ImageView</string>

    <string name="nav_menu_1">Nav Menu 1</string>
    <string name="nav_menu_2">Nav Menu 2</string>
    <string name="nav_menu_3">Nav Menu 3</string>
    <string name="nav_menu_sub_head_1">Nav Sub Menu 1</string>
    <string name="nav_menu_sub_1">Nav Sub Menu 1</string>
    <string name="nav_menu_sub_2">Nav Sub Menu 2</string>
    <string name="nav_menu_sub_3">Nav Sub Menu 3</string>
    <string name="nav_menu_sub_head_2">Nav Sub Menu 2</string>
    <string name="nav_menu_sub_4">Nav Sub Menu 4</string>
    <string name="nav_menu_sub_5">Nav Sub Menu 5</string>
    <string name="nav_menu_sub_6">Nav Sub Menu 6</string>

    <string name="label_edittext_hint_1">EditText Hint 1</string>
    <string name="label_edittext_hint_2">EditText Hint 2</string>
    <string name="label_edittext_hint_3">EditText Hint 3</string>

    <string name="fab_mini">Mini Floating Action Button</string>
    <string name="fab_normal">Normal Floating Action Button</string>

    <string name="snackbar_display_length_short">Display Snackbar.LENGTH_SHORT</string>
    <string name="snackbar_display_length_long">Display Snackbar.LENGTH_LONG</string>
    <string name="snackbar_messge">I Love You! :D</string>
    <string name="snackbar_button_text">Ok.</string>
    <string name="snackbar_alert_message">Thankz!</string>
    <string name="snackbar_alert_positive">You\'re welcome.</string>
    <string name="snackbar_alert_negative">Get lost!</string>
    <string name="snackbar_alert_neutral">Ignore</string>

    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="item_6">Item 6</string>
    <string name="item_7">Item 7</string>
    <string name="item_8">Item 8</string>
    <string name="item_9">Item 9</string>
    <string name="item_10">Item 10</string>
    <string name="item_11">Item 11</string>
    <string name="item_12">Item 12</string>
    <string name="item_13">Item 13</string>
    <string name="item_14">Item 14</string>
    <string name="item_15">Item 15</string>
    <string name="item_16">Item 16</string>
    <string name="item_17">Item 17</string>
    <string name="item_18">Item 18</string>
    <string name="item_19">Item 19</string>
    <string name="item_20">Item 20</string>
    <string name="item_21">Item 21</string>
    <string name="item_22">Item 22</string>
    <string name="item_23">Item 23</string>
    <string name="item_24">Item 24</string>
    <string name="item_25">Item 25</string>
    <string name="item_26">Item 26</string>
    <string name="item_27">Item 27</string>
    <string name="item_28">Item 28</string>
    <string name="item_29">Item 29</string>
    <string name="item_30">Item 30</string>
    <string name="item_new">New Item</string>
    <string name="item_add_top">Add Item on top</string>
    <string name="item_add_bottom">Add Item on bottom</string>
    <string name="item_remove_top">Remove Item on top</string>
    <string name="item_remove_bottom">Remove Item on bottom</string>
    <string name="title_activity_coord_layout_fab">CoordLayoutFabActivity</string>
    <string name="title_activity_coord_layout_app_bar">CoordLayoutAppBarActivity</string>
    <string name="title_activity_coord_layout_app_bar_img">CoordLayoutAppBarImgActivity</string>
    <string name="title_activity_tabs">TabsActivity</string>

    <string name="tab_name_1">Tab 1</string>
    <string name="tab_name_2">Tab 2</string>
    <string name="tab_name_3">Tab 3</string>
    <string name="tab_name_4">Tab 4</string>
    <string name="tab_name_5">Tab 5</string>

</resources>
