<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_1"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_menu_1" />
        <item
            android:id="@+id/nav_menu_2"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_menu_2" />
        <item
            android:id="@+id/nav_menu_3"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_menu_3" />
    </group>

    <item
        android:id="@+id/nav_menu_sub_head_1"
        android:title="@string/nav_menu_sub_head_1">
        <menu>
            <item
                android:id="@+id/nav_menu_sub_1"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_menu_sub_1" />
            <item
                android:id="@+id/nav_menu_sub_2"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_menu_sub_2" />
            <item
                android:id="@+id/nav_menu_sub_3"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_menu_sub_3" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_menu_sub_head_2"
        android:title="@string/nav_menu_sub_head_1">
        <menu>
            <item
                android:id="@+id/nav_menu_sub_4"
                android:title="@string/nav_menu_sub_4" />
            <item
                android:id="@+id/nav_menu_sub_5"
                android:title="@string/nav_menu_sub_5" />
            <item
                android:id="@+id/nav_menu_sub_6"
                android:title="@string/nav_menu_sub_6" />
        </menu>
    </item>
</menu>