<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.walng.dhagz.designsupportlibrarytest.floatinglabels.FloatingLabelsActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/label_edittext_hint_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_edittext_hint_1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/label_edittext_hint_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_edittext_hint_2" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/label_edittext_hint_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_edittext_hint_3" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
